--- a/package.json
+++ b/package.json
@@ -28,14 +28,18 @@
     "actions-on-google": "^2.12.0",
     "firebase-admin": "^8.9.2",
     "firebase-functions": "^3.3.0",
+    "i18n": "^0.8.5",
     "jsdom": "^16.2.0",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.28",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "sprintf-js": "^1.1.2"
   },
   "devDependencies": {
+    "@types/i18n": "^0.8.6",
     "@types/jsdom": "^16.1.0",
     "@types/request": "^2.48.4",
+    "@types/sprintf-js": "^1.1.2",
     "@typescript-eslint/eslint-plugin": "^2.22.0",
     "@typescript-eslint/parser": "^2.22.0",
     "ava": "1.4.1",
